--- a/main.css
+++ b/main.css
@@ -6,6 +6,12 @@
     text-align: center;
 }
 
+body {
+    background-image: url("bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 label {
     font-size: 30px;
 }
