--- a/main.css
+++ b/main.css
@@ -47,6 +47,6 @@ input[type="submit"] {
     margin: 0 auto;
 }
 
-.selectize-control.multi .selectize-input > div {
+.item {
     background-color: pink;
 }
