--- a/button.css
+++ b/button.css
@@ -8,7 +8,7 @@
 	cursor: pointer;
 	padding: 25px 80px;
 	display: inline-block;
-	margin: 15px 30px;
+	margin: 30px 30px 15px 30px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-weight: 700;
@@ -17,7 +17,7 @@
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
-	background: #17954c;
+	background: #207c1d;
 	border-radius: 50px;
 	border: 3px solid #fff;
 	color: #fff;
@@ -61,17 +61,17 @@
 }
 
 .btn:active {
-	border-color: #146837;
+	border-color: #175015;
 	color: #FFF;
 }
 
 .btn:hover {
-	background: #146837;
+	background: #175015;
 }
 
 
 .btn:active:before {
-	color: #085528;
+	color: #175015;
 }
 
 .btn:hover:before {
