--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ input[type="text"] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 45vw;
+    width: 60vw;
     margin: 0vh auto 5vh auto;
 }
 
@@ -60,8 +60,12 @@ input[type="text"] {
 
 /* SELECTIZE */
 .selectize-input {
-    height: 5vh;
-    width: 40vw;
+    height: 14vh;
+    width: 60vw;
+}
+
+.selectize-control.multi .selectize-input > div > div {
+    border: 1px solid #FFF;
 }
 
 .selectize-control.multi .selectize-input [data-value]{ 
@@ -170,5 +174,9 @@ input[type="text"] {
 
     .result {
         width: 60%;
+    }
+
+    .selectize-input {
+        height: 5vh;
     }
 }
